Added css to html

--- a/ticTacToe.html
+++ b/ticTacToe.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Tic Tac Toe</title>
+        <title>Tic Tac Toe Online</title>
         <meta charset="utf-8">
         <meta name="viewport" content='width=device-width, initial-scale=1.0'>
+        <link rel="stylesheet" type="text/css" href="css/game.css">
     </head>
-    <body>
+    <body id='body'>
+        <h1>Tic Tac Toe</h1>
         <!--This container is needed to overlay the canvas over the table.-->
         <div class='centerContainer'>
             <!--Canvas width and height is determined at the html file-->
