--- a/ticTacToe.html
+++ b/ticTacToe.html
@@ -5,6 +5,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content='width=device-width, initial-scale=1.0'>
         <link rel="stylesheet" type="text/css" href="css/game.css">
+        <script src="js/ticTactoe.js"></script>
     </head>
     <body id='body'>
         <h1>Tic Tac Toe</h1>
